Creado mediante Colaboratory

--- a/DOP853.ipynb
+++ b/DOP853.ipynb
@@ -28,6 +28,20 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "jmtJfs3VhEL0",
+        "colab_type": "text"
+      },
+      "source": [
+        "Sebastián Botero Sánchez\n",
+        "\n",
+        "Juan José Cárdenas Osorio\n",
+        "\n",
+        "Juan Felipe Estrada Naranjo"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "Mwfmqaved-4m",
         "colab_type": "text"
       },
