Creado mediante Colaboratory

--- a/Proyecto_Final_Modelado_y_Simulación.ipynb
+++ b/Proyecto_Final_Modelado_y_Simulación.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "Proyecto_Final_Modelado_y_Simulación.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -121,7 +122,27 @@
         "colab_type": "text"
       },
       "source": [
-        "##Bifurcations "
+        "##Bifurcaciones "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fCiu0cG1otLT",
+        "colab_type": "text"
+      },
+      "source": [
+        "El sistema tiene un comportamiento caótico en el intervalo 0.062 ≤ m ≤ 0.185, excepto un intervalo 0.101–0.105. Además, el sistema tiene un comportamiento caótico en el intervalo 0.215 ≤ m ≤ 0.225. Por otro lado, el sistema tiene un comportamiento de ciclo límite en los intervalos 0.186 ≤ m ≤ 0.214 y 0.226 ≤ m ≤ 0.4."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZSTC1yrro-E1",
+        "colab_type": "text"
+      },
+      "source": [
+        "Diagrama de bifurcaciones entre 0.062 y 0.4."
       ]
     },
     {
@@ -188,6 +209,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Lt8I7EWApFUs",
+        "colab_type": "text"
+      },
+      "source": [
+        "Diagrama de bifurcaciones entre 0.215 y 0.225"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "iiQp_u53tDDY",
@@ -245,6 +276,16 @@
             "needs_background": "light"
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "leTs0X0tpQ1Z",
+        "colab_type": "text"
+      },
+      "source": [
+        "Diagrama de bifurcaciones entre 0.062 y 0.108"
       ]
     },
     {
