Creado mediante Colaboratory

--- a/Proyecto_Final_Modelado_y_Simulación.ipynb
+++ b/Proyecto_Final_Modelado_y_Simulación.ipynb
@@ -500,8 +500,37 @@
         "## Sistema Reescalado:\n",
         "\n",
         "$$ \\frac{du}{dt}=a(u)-5av $$\n",
-        "$$ \\frac{dv}{dt}=-4av+2uw+(m/5)u^3 $$\n",
-        "$$ \\frac{dw}{dt}=-adw+0.5u^3v+10bw^2 $$\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "chQpkPQCwBHG",
+        "colab_type": "text"
+      },
+      "source": [
+        "$$ \\frac{dv}{dt}=-4av+2uw+(m/5)u^3 $$"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0tYrnR4ywCQS",
+        "colab_type": "text"
+      },
+      "source": [
+        "$$ \\frac{dw}{dt}=-adw+0.5u^3v+10bw^2 $$"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "IPsOYl4LwAvh",
+        "colab_type": "text"
+      },
+      "source": [
         "\n",
         "Los nuevos diagramas de fase del sistema caótico reescalado con a = 1.8, b = −0.07, d = 1.5, m = 0.12 son:"
       ]
