Creado mediante Colaboratory

--- a/Proyecto_Final_Modelado_y_Simulación.ipynb
+++ b/Proyecto_Final_Modelado_y_Simulación.ipynb
@@ -183,7 +183,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 283
         },
-        "outputId": "1d7b0005-7ba5-42b6-e7f4-f0fc046151b8"
+        "outputId": "f064bae5-9f59-426e-d257-cfff87a4f9f7"
       },
       "source": [
         "def model (t,y,a,b,d,m):\n",
@@ -192,7 +192,7 @@
         "def event_model (t,y,a,b,d,m):\n",
         "  return y[0]+y[1]+y[2]+1.5\n",
         "\n",
-        "event_model.direction=-1\n",
+        "event_model.direction=-2\n",
         "\n",
         "a,b=0,100\n",
         "t= np.linspace(a,b,10000)\n",
@@ -213,12 +213,12 @@
         "\n",
         "\n"
       ],
-      "execution_count": 65,
+      "execution_count": 72,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "time= 104.94333899999992\n"
+            "time= 104.89600099999984\n"
           ],
           "name": "stdout"
         },
@@ -607,6 +607,18 @@
             "needs_background": "light"
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "crYu95U8y7eV",
+        "colab_type": "text"
+      },
+      "source": [
+        "Articulo original: https://www.sciencedirect.com/science/article/pii/S0030402616304430\n",
+        "\n",
+        "También se encuentra el pdf en el repositorio: https://github.com/jfestradan/Modelado-y-simulacion/blob/master/Articulo%20Proyecto%20Final.pdf"
       ]
     }
   ]
